--- a/src/style.css
+++ b/src/style.css
@@ -115,3 +115,20 @@ hr {
 .croissant-pics:hover {
   transform: scale(1.2);
 }
+
+/*contact page */
+.contact {
+  border: 5px solid #885df1;
+  border-radius: 10px;
+  padding: 5px;
+  background-color: #dfd4f9;
+}
+
+#submit-btn {
+  background-color: #885df1;
+  border-radius: 10px;
+  padding: 10px;
+  margin-top: 10px;
+  color: white;
+  font-family: var(--third-font);
+}
